Get text out of localisation file.

--- a/content/D2E/base/activations.ini
+++ b/content/D2E/base/activations.ini
@@ -86,6 +86,11 @@ master="> Spot as many monsters within 5 spaces of this monster that have suffer
 minionfirst=true
 
 ;fixme add
+[MonsterActivationBarghest1]
+ability={ffg:EFFECT_BARGHEST_1}
+minion={ffg:BARGHEST_1_MINION_0}
+master={ffg:BARGHEST_1_MASTER_0}
+
 ;EFFECT_BARGHEST_1 master first
 ;EFFECT_BARGHEST_2 minion first
 ;EFFECT_BARGHEST_3 minion first
