Fixed missing activation bug

--- a/content/D2E/base/activations.ini
+++ b/content/D2E/base/activations.ini
@@ -85,15 +85,23 @@ minion="> Spot the closest hero.\n> Attack the closest hero.\n> If within 2 spac
 master="> Spot as many monsters within 5 spaces of this monster that have suffered Damage as possible.\n> Use "Heal" on 1 or more monsters.\n> Each hero in line of sight of this monster suffers 2 Damage."
 minionfirst=true
 
-;fixme add
-[MonsterActivationBarghest1]
+[MonsterActivationBarghestOne]
 ability={ffg:EFFECT_BARGHEST_1}
 minion={ffg:BARGHEST_1_MINION_0}
 master={ffg:BARGHEST_1_MASTER_0}
+masterfirst=true
 
-;EFFECT_BARGHEST_1 master first
-;EFFECT_BARGHEST_2 minion first
-;EFFECT_BARGHEST_3 minion first
+[MonsterActivationBarghest2]
+ability={ffg:EFFECT_BARGHEST_2}
+minion={ffg:BARGHEST_2_MINION_0}
+master={ffg:BARGHEST_2_MASTER_0}
+minionfirst=true
+
+[MonsterActivationBarghest3]
+ability={ffg:EFFECT_BARGHEST_3}
+minion={ffg:BARGHEST_3_MINION_0}
+master={ffg:BARGHEST_3_MASTER_0}
+minionfirst=true
 
 ;fixme add
 ;EFFECT_ETTIN_1 minion first - Only if there is a minion!!
