Activations added and started symbol support

--- a/content/D2E/base/activations.ini
+++ b/content/D2E/base/activations.ini
@@ -85,7 +85,7 @@ minion="> Spot the closest hero.\n> Attack the closest hero.\n> If within 2 spac
 master="> Spot as many monsters within 5 spaces of this monster that have suffered Damage as possible.\n> Use "Heal" on 1 or more monsters.\n> Each hero in line of sight of this monster suffers 2 Damage."
 minionfirst=true
 
-[MonsterActivationBarghestOne]
+[MonsterActivationBarghest1]
 ability={ffg:EFFECT_BARGHEST_1}
 minion={ffg:BARGHEST_1_MINION_0}
 master={ffg:BARGHEST_1_MASTER_0}
@@ -103,10 +103,23 @@ minion={ffg:BARGHEST_3_MINION_0}
 master={ffg:BARGHEST_3_MASTER_0}
 minionfirst=true
 
-;fixme add
-;EFFECT_ETTIN_1 minion first - Only if there is a minion!!
-;EFFECT_ETTIN_2 master first
-;EFFECT_ETTIN_3 minion first
+[MonsterActivationEttin1]
+ability={ffg:EFFECT_ETTIN_1}
+minion={ffg:ETTIN_1_MINION_0}
+master={ffg:ETTIN_1_MASTER_0}
+minionfirst=true
+
+[MonsterActivationEttin2]
+ability={ffg:EFFECT_ETTIN_2}
+minion={ffg:ETTIN_2_MINION_0}
+master={ffg:ETTIN_2_MASTER_0}
+masterfirst=true
+
+[MonsterActivationEttin3]
+ability={ffg:EFFECT_ETTIN_3}
+minion={ffg:ETTIN_3_MINION_0}
+master={ffg:ETTIN_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationElementalEarth]
 ability="Immediately after an Elemental uses "Earth," place it in the closest empty spaces not adjacent to any hero."
@@ -114,8 +127,17 @@ minion="> Engage as many heroes as possible within 5 spaces of this monster.\n> 
 master="> Engage as many heroes as possible within 5 spaces of this monster.\n> Use "Earth."\n> Spot the closest hero.\n> Attack the closest hero."
 minionfirst=true
 
-;EFFECT_ELEMENTAL_2 minion first
-;EFFECT_ELEMENTAL_3 minion first
+[MonsterActivationElemental2]
+ability={ffg:EFFECT_ELEMENTAL_2}
+minion={ffg:ELEMENTAL_2_MINION_0}
+master={ffg:ELEMENTAL_2_MASTER_0}
+minionfirst=true
+
+[MonsterActivationElemental3]
+ability={ffg:EFFECT_ELEMENTAL_3}
+minion={ffg:ELEMENTAL_3_MINION_0}
+master={ffg:ELEMENTAL_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationMerriodAttack]
 ability="Each time a hero suffers the Immobilized condition during this activation, move that hero 1 space away from the closest Merriod."
@@ -123,14 +145,35 @@ minion="> Attack a hero who is not Immobilized.\n> Attack a hero.\n> Engage the 
 master="> Engage the farthest hero who is within 6 spaces.\n> Attack a hero who is not Immobilized.\n> Attack a hero.\n> Engage the closest hero."
 minionfirst=true
 
-;fixme add
-; EFFECT_MERRIOD_2 minionfirst=true
-; EFFECT_MERRIOD_3 masterfirst=true
+[MonsterActivationMerriod2]
+ability={ffg:EFFECT_MERRIOD_2}
+minion={ffg:MERRIOD_2_MINION_0}
+master={ffg:MERRIOD_2_MASTER_0}
+minionfirst=true
 
-;fixme add
-;EFFECT_SHADOW_DRAGON_1 master first
-;EFFECT_SHADOW_DRAGON_2 master first - Only if there is a minion!!
-;EFFECT_SHADOW_DRAGON_3 master first
+[MonsterActivationMerriod3]
+ability={ffg:EFFECT_MERRIOD_3}
+minion={ffg:MERRIOD_3_MINION_0}
+master={ffg:MERRIOD_3_MASTER_0}
+masterfirst=true
+
+[MonsterActivationShadowDragon1]
+ability={ffg:EFFECT_SHADOW_DRAGON_1}
+minion={ffg:SHADOW_DRAGON_1_MINION_0}
+master={ffg:SHADOW_DRAGON_1_MASTER_0}
+masterfirst=true
+
+[MonsterActivationShadowDragon2]
+ability={ffg:EFFECT_SHADOW_DRAGON_2}
+minion={ffg:SHADOW_DRAGON_2_MINION_0}
+master={ffg:SHADOW_DRAGON_2_MASTER_0}
+masterfirst=true
+
+[MonsterActivationShadowDragon3]
+ability={ffg:EFFECT_SHADOW_DRAGON_3}
+minion={ffg:SHADOW_DRAGON_3_MINION_0}
+master={ffg:SHADOW_DRAGON_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationBrawler1]
 ability="Each attack gains +2 Damage."
