Fixes and more proper activations.

--- a/content/D2E/base/activations.ini
+++ b/content/D2E/base/activations.ini
@@ -1,89 +1,83 @@
-[MonsterActivationZombieSurge]
-; Optional name for display (if spaces or other formatting required)
-; name="Zombie Rush"
-; Unique ability text
-ability="Each attack gains +1 Surge."
-; Minion actication
-minion="> Engage the closest hero.\n> Attack a hero."
-; Master activation
-master="> Engage the closest hero who is not Diseased.\n> Attack a hero.\n> Engage the closest hero."
-; Optionally force master to activate first
-; masterfirst = 0
-; optional priority, allows content packs to duplicate content and replace items
-; priority=0
+[MonsterActivationZombie1]
+ability={ffg:EFFECT_ZOMBIE_1}
+minion={ffg:ZOMBIE_1_MINION_0}
+master={ffg:ZOMBIE_1_MASTER_0}
 minionfirst=true
 
-[MonsterActivationZombieSuround]
-ability="After all zombies have activated, each hero suffers Damage equal to the number of zombies he is adjacent to."
-minion="> Engage as many heros as possible within 4 spaces of this monster.\n> Attack a hero."
-master="> Engage as many heros as possible within 4 spaces of this monster.\n> Attack a hero."
+[MonsterActivationZombie2]
+ability={ffg:EFFECT_ZOMBIE_2}
+minion={ffg:ZOMBIE_2_MINION_0}
+master={ffg:ZOMBIE_2_MASTER_0}
+minionfirst=true
+
+[MonsterActivationZombie3]
+ability={ffg:EFFECT_ZOMBIE_3}
+minion={ffg:ZOMBIE_3_MINION_0}
+master={ffg:ZOMBIE_3_MASTER_0}
+minionfirst=true
+
+; Zombie 4 is redundant with Brawler
+
+[MonsterActivationZombie5]
+ability={ffg:EFFECT_ZOMBIE_5}
+minion={ffg:ZOMBIE_5_MINION_0}
+master={ffg:ZOMBIE_5_MASTER_0}
 masterfirst=true
 
-[MonsterActivationZombieGrab]
-ability="After each zombie's activation, that zombie performs "Grab" on a hero."
-minion="> Engage the closest hero who is not Immobilized.\n> Attack a hero.\n> Engage the closest hero."
-master="> Engage the closest hero who is not Immobilized.\n> Attack a hero.\n> Use "Grab" on a hero.\n> Engage the closest hero."
+[MonsterActivationGoblinArcher1]
+ability={ffg:EFFECT_GOBLIN_ARCHER_1}
+minion={ffg:GOBLIN_ARCHER_1_MINION_0}
+master={ffg:GOBLIN_ARCHER_1_MASTER_0}
 minionfirst=true
 
-[MonsterActivationZombieRush]
-ability="Apply +2 Speed to each zombie.  Each attack gains +1 Damage."
-minion="> Engage the closest hero.\n> Attack a hero."
-master="> Engage the closest hero.\n> Attack a hero."
-minionfirst=true
-
-[MonsterActivationGoblinArcherRetreat]
-ability="Each time a Goblin Archer resolves an attack, it performs a move action and retreats. Then its activation immediately ends."
-minion=">  Attack a hero within 3 space.\n> Spot the closest hero."
-master="> Spot the hero wihtin 5 spaces of this monster with the least Health remaining.\n> Attack the hero within 3 spaces of this monster with the least Health remaining.\n> Spot the closest hero.\n> Attack a hero."
-minionfirst=true
-
-[MonsterActivationGoblinArcherRush]
-ability="Apply +3 Speed to each monster."
-minion="> Spot the hero with the least Health remaining.\n> Attack the hero within 3 spaces of this monster with the least Health remaining. Then retreat."
-master="> Spot the hero with the least Health remaining.\n> Attack the hero within 3 spaces of this monster with the least Health remaining. Then retreat."
+[MonsterActivationGoblinArcher2]
+ability={ffg:EFFECT_GOBLIN_ARCHER_2}
+minion={ffg:GOBLIN_ARCHER_2_MINION_0}
+master={ffg:GOBLIN_ARCHER_2_MASTER_0}
 masterfirst=true
 
-[MonsterActivationGoblinArcherRange]
-ability="Each attack gains +3 Range. The master's attack ignores line of sight and gains +1 Damage for each adjacent minion Goblin Archer."
-minion="> Engage the master Goblin Archer.\n> Attack the closest hero.\n> Engage the closest master monster."
-master="> Attack the closest hero.\n> If this monster has performed an attack, perform a move action and retreat."
+[MonsterActivationGoblinArcher3]
+ability={ffg:EFFECT_GOBLIN_ARCHER_3}
+minion={ffg:GOBLIN_ARCHER_3_MINION_0}
+master={ffg:GOBLIN_ARCHER_3_MASTER_0}
 minionfirst=true
 
-[MonsterActivationCaveSpiderDisease]
-ability="If a hero is Poisoned after being attacked, that hero is also Diseased."
-minion="> Engage a hero within 5 spaces of this monster who is not Diseased.\n> Attack a hero who is not Diseased.\n> Engage the closest hero.\n> Attack a hero."
-master="> Engage the closest hero within 5 spaces of this monster who is not Diseased.\n> Attack a hero who is not Diseased.\n> Engage the closest hero.\n> Attack a hero."
+
+[MonsterActivationCaveSpider1]
+ability={ffg:EFFECT_CAVE_SPIDER_1}
+minion={ffg:CAVE_SPIDER_1_MINION_0}
+master={ffg:CAVE_SPIDER_1_MASTER_0}
 minionfirst=true
 
-[MonsterActivationCaveSpiderFallBack]
-ability="After this activation, each hero adjacent to a Cave Spider tests Will; each hero adds Defence to his results equal to the number of adjacent Cave Spiders. Each hero who fails retreats 2 spaces away from the closest Cave Spider."
-minion="> Engage the closest hero within 5 spaces of this monster who is not Poisoned.\n> Attack a hero who is not Poisoned.\n> Engage the closest hero.\n> Attack a hero."
-master="> Engage the hero within 5 spaces of this monster with the most Damage suffered.\n> Attack the adjacent hero with the most Damage suffered.\n> Engage the closest hero."
+[MonsterActivationCaveSpider2]
+ability={ffg:EFFECT_CAVE_SPIDER_2}
+minion={ffg:CAVE_SPIDER_2_MINION_0}
+master={ffg:CAVE_SPIDER_2_MASTER_0}
 minionfirst=true
 
-[MonsterActivationCaveSpiderRetreat]
-ability="After each minion Cave Spider resolves an attack, it performs a move action and retreats. Then its activation immediately ends."
-minion="> Engage the closest hero.\n> Attack a hero."
-master="> Engage as many heroes as possible within 5 spaces of this monster.\n> If this monster is adjacent to 2 or more heroes, each adjacent hero test Might. Each hero who fails is Immobilized.\n> Attack a hero.\n> Engage the closest hero."
+[MonsterActivationCaveSpider3]
+ability={ffg:EFFECT_CAVE_SPIDER_3}
+minion={ffg:CAVE_SPIDER_3_MINION_0}
+master={ffg:CAVE_SPIDER_3_MASTER_0}
 minionfirst=true
 
-[MonsterActivationFleshMoulderDrain]
-ability="Each time a hero suffers Damage, the closest monster to that hero that has suffered Damage recovers 1 Health."
-minion="> Spot the closest hero.\n> Attack hero within 3 spaces of this monster with the lowest Might.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Spot the hero with the most Fatigue suffered.\n> Attack hero within 3 spaces of this monster with the most Fatigue suffered.\n> If within 2 spaces of a hero, perform a move action and retreat."
+[MonsterActivationFleshMoulder1]
+ability={ffg:EFFECT_FLESH_MOULDER_1}
+minion={ffg:FLESH_MOULDER_1_MINION_0}
+master={ffg:FLESH_MOULDER_1_MASTER_0}
+minionfirst=true
+
+[MonsterActivationFleshMoulder2]
+ability={ffg:EFFECT_FLESH_MOULDER_2}
+minion={ffg:FLESH_MOULDER_2_MINION_0}
+master={ffg:FLESH_MOULDER_2_MASTER_0}
+minionfirst=true
+
+[MonsterActivationFleshMoulder3]
+ability={ffg:EFFECT_FLESH_MOULDER_3}
+minion={ffg:FLESH_MOULDER_3_MINION_0}
+master={ffg:FLESH_MOULDER_3_MASTER_0}
 masterfirst=true
-
-[MonsterActivationFleshMoulderHeal]
-ability="Each time a flesh moulder recovers Health, each monster within 3 spaces that is not a Flesh Moulder recovers an equal amount of Health."
-minion="> Spot the closest hero.\n> Attack the closest hero.\n> Each Flesh Moulder recovers 1 Health."
-master="> Spot the monster with the most Damage suffered.\n> Use "Heal" on a monster.\n> Attack the closest hero.\n> If within 2 spaces of a hero, perform a move action and retreat."
-minionfirst=true
-
-[MonsterActivationFleshMoulderAreaHeal]
-ability=""Heal" affects each monster within 3 spaces of the master."
-minion="> Spot the closest hero.\n> Attack the closest hero.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Spot as many monsters within 5 spaces of this monster that have suffered Damage as possible.\n> Use "Heal" on 1 or more monsters.\n> Each hero in line of sight of this monster suffers 2 Damage."
-minionfirst=true
 
 [MonsterActivationBarghest1]
 ability={ffg:EFFECT_BARGHEST_1}
@@ -175,67 +169,57 @@ minion={ffg:SHADOW_DRAGON_3_MINION_0}
 master={ffg:SHADOW_DRAGON_3_MASTER_0}
 masterfirst=true
 
+
 [MonsterActivationBrawler1]
-ability="Each attack gains +2 Damage."
-minion="> Engage the closest hero.\n> Attack a hero."
-master="> Engage the closest hero.\n> Attack a hero."
+ability={ffg:EFFECT_BRAWLER_1}
+minion={ffg:BRAWLER_1_MINION_0}
+master={ffg:BRAWLER_1_MASTER_0}
 minionfirst=true
 
 [MonsterActivationBrawler2]
-ability="Each attack performed by a master gains 2 Surges."
-minion="> Engage the closest hero.\n> Attack a hero."
-master="> Engage the closest hero.\n> Attack a hero."
+ability={ffg:EFFECT_BRAWLER_2}
+minion={ffg:BRAWLER_2_MINION_0}
+master={ffg:BRAWLER_2_MASTER_0}
 masterfirst=true
 
 [MonsterActivationBrawler3]
-ability="Apply +2 Speed to each monster."
-minion="> Engage the closest hero.\n> Attack a hero."
-master="> Engage the closest hero.\n> Attack a hero.\n> Each hero in line of sight of this monster tests Will. Each hero who fails is Stunned."
+ability={ffg:EFFECT_BRAWLER_3}
+minion={ffg:BRAWLER_3_MINION_0}
+master={ffg:BRAWLER_3_MASTER_0}
 minionfirst=true
 
-
 [MonsterActivationSkirmisher1]
-ability="Heroes cannot voluntarily suffer Fatigue or exhaust cards during this activation."
-minion="> Engage the closest hero.\n> Attack the adjacent hero with the lowest Might.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Engage the closest hero.\n> Attack the adjacent hero with the lowest Might.\n> If within 2 spaces of a hero, perform a move action and retreat."
+ability={ffg:EFFECT_SKIRMISHER_1}
+minion={ffg:SKIRMISHER_1_MINION_0}
+master={ffg:SKIRMISHER_1_MASTER_0}
 minionfirst=true
 
 [MonsterActivationSkirmisher2]
-ability="Each attack gains Pierce X, where X is equal to the number of defense dice rolled."
-minion="> Engage the closest hero.\n> Attack the adjacent hero with the highest total Health.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Engage the closest hero.\n> Attack the adjacent hero with the highest total Health.\n> If within 2 spaces of a hero, perform a move action and retreat."
+ability={ffg:EFFECT_SKIRMISHER_2}
+minion={ffg:SKIRMISHER_2_MINION_0}
+master={ffg:SKIRMISHER_2_MASTER_0}
 minionfirst=true
 
 [MonsterActivationSkirmisher3]
-ability="After this activation, each monster performs a move action and retreats."
-minion="∞ Engage the hero within 4 spaces of this monster with the least Health remaining.\n> Engage the closest hero.\n> Attack the adjacent hero with the least Health remaining."
-master="∞ Engage the hero within 4 spaces of this monster with the most ≥ suffered.\n> Engage the closest hero.\n> Attack the adjacent hero with the most ≥ suffered."
+ability={ffg:EFFECT_SKIRMISHER_3}
+minion={ffg:SKIRMISHER_3_MINION_0}
+master={ffg:SKIRMISHER_3_MASTER_0}
 minionfirst=true
 
 [MonsterActivationRange1]
-ability="Each attack gains +3 Range."
-minion="> Attack the hero within 6 spaces of the monster with the highest Speed.\n> If within 2 space of a hero, perform a move action, retreat, and immediately end this activation.\n> Spot the closest hero.\n> Attack the closest hero.  Then retreat."
-master="> Attack the hero within 6 spaces of the monster with the highest Speed.\n> If within 2 space of a hero, perform a move action, retreat, and immediately end this activation.\n> Spot the closest hero.\n> Attack the closest hero.  Then retreat."
+ability={ffg:EFFECT_RANGE_1}
+minion={ffg:RANGE_1_MINION_0}
+master={ffg:RANGE_1_MASTER_0}
 masterfirst=true
 
 [MonsterActivationRange2]
-ability="Each attack gains +1 Surge.  For each Surge a monster does not spend, it gains 1 movement point."
-minion="> Spot the closest hero.\n> Attack the closest hero.  Then retreat.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Spot the closest hero.\n> Attack the closest hero.  Then retreat.\n> If within 2 spaces of a hero, perform a move action and retreat."
+ability={ffg:EFFECT_RANGE_2}
+minion={ffg:RANGE_2_MINION_0}
+master={ffg:RANGE_2_MASTER_0}
 minionfirst=true
 
 [MonsterActivationRange3]
-ability="Each attack performed by a minion gains +2 Damage."
-minion="> Spot the as many heros as possible.\n> Attack the hero within 3 spaces of this monster with the most Health remaining.\n> If within 2 spaces of a hero, perform a move action and retreat."
-master="> Spot the closest hero.\n> Attack the hero within 3 spaces of this monster with the lowest Awareness.\n> If within 2 spaces of a hero, perform a move action and retreat."
+ability={ffg:EFFECT_RANGE_3}
+minion={ffg:RANGE_3_MINION_0}
+master={ffg:RANGE_3_MASTER_0}
 minionfirst=true
-
-;μ = Awareness
-;∏ = Fatigue
-;∂ = Might
-;π = Will
-;∞ - Action
-;≥ - Damage
-;± - Surge
-;≤ - Sheild
-
