Minor bug fixes, info/activation import and better new/delete in editor

--- a/content/D2E/base/activations.ini
+++ b/content/D2E/base/activations.ini
@@ -115,10 +115,10 @@ minion={ffg:ETTIN_3_MINION_0}
 master={ffg:ETTIN_3_MASTER_0}
 minionfirst=true
 
-[MonsterActivationElementalEarth]
-ability="Immediately after an Elemental uses "Earth," place it in the closest empty spaces not adjacent to any hero."
-minion="> Engage as many heroes as possible within 5 spaces of this monster.\n> Use "Earth."\n> Spot the closest hero.\n> Attack the closest hero."
-master="> Engage as many heroes as possible within 5 spaces of this monster.\n> Use "Earth."\n> Spot the closest hero.\n> Attack the closest hero."
+[MonsterActivationElemental1]
+ability={ffg:EFFECT_ELEMENTAL_1}
+minion={ffg:ELEMENTAL_1_MINION_0}
+master={ffg:ELEMENTAL_1_MASTER_0}
 minionfirst=true
 
 [MonsterActivationElemental2]
@@ -133,10 +133,10 @@ minion={ffg:ELEMENTAL_3_MINION_0}
 master={ffg:ELEMENTAL_3_MASTER_0}
 minionfirst=true
 
-[MonsterActivationMerriodAttack]
-ability="Each time a hero suffers the Immobilized condition during this activation, move that hero 1 space away from the closest Merriod."
-minion="> Attack a hero who is not Immobilized.\n> Attack a hero.\n> Engage the closest hero."
-master="> Engage the farthest hero who is within 6 spaces.\n> Attack a hero who is not Immobilized.\n> Attack a hero.\n> Engage the closest hero."
+[MonsterActivationMerriod1]
+ability={ffg:EFFECT_MERRIOD_1}
+minion={ffg:MERRIOD_1_MINION_0}
+master={ffg:MERRIOD_1_MASTER_0}
 minionfirst=true
 
 [MonsterActivationMerriod2]
