--- a/content/D2E/base/monsters.ini
+++ b/content/D2E/base/monsters.ini
@@ -4,7 +4,7 @@
 ; image to display
 image="../ffg/img/Monster_Zombie.dds"
 ; Description text regarding surge/ability use
-info="Zombies spend Surges in the following order:\n: Disease\n: +X Damage\n\nGrab: Zombies only use "Grab" on heroes who are not Immobilized."
+info={ffg:INSTRUCTION_ZOMBIE}
 ; This will probably need some work to standardise
 traits=undead melee cursed building small
 ; optional priority, allows content packs to duplicate content and replace items
@@ -14,21 +14,21 @@ activation=Brawler1
 [MonsterGoblinArcher]
 name="Goblin Archer"
 image="../ffg/img/Monster_Goblin.dds"
-info="Act I Goblin Witchers spend Surges in the following order: \n: Range (when necessary)\n: Curse \n\nAct II Goblin Witchers spend Surges in the following order: \n: Range (when necessary)\n: Curse\n: +X Damage"
+info={ffg:INSTRUCTION_GOBLIN_ARCHER}
 traits=ranged cave building small goblin
 activation=Range1 Range2 Range3
 
 [MonsterCaveSpider]
 name="Cave Spider"
 image="../ffg/img/Monster_CaveSpider.dds"
-info="Cave spiders spend Surges in the following order: \n: Poison \n: +X Damage"
+info={ffg:INSTRUCTION_CAVE_SPIDER}
 traits=melee cave wilderness small
 activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterFleshMoulder]
 name="Flesh Moulder"
 image="../ffg/img/Monster_FleshMoulder.dds"
-info="Flesh Moulders spend Surges in the following order: \n: Mend X \n: +X Damage \n\nMend: The Flesh Moulder only uses Mend if that Flesh Moulder has suffered Damge equal to or greater than X).\n\nHeal: Flesh Moulders only use ""Heal"" on a monster if that monster has suffered at least 1 Damage."
+info={ffg:INSTRUCTION_FLESH_MOULDER}
 traits=ranged cursed civilized small
 activation=Range1 Range2 Range3
 
@@ -36,33 +36,33 @@ activation=Range1 Range2 Range3
 name="Barghest"
 image="../ffg/img/Monster_Barghest.dds"
 imageplace="../ffg/img/Monster_Barghest_Placement.dds"
-info="Barghests spend Surges in the following order:\n: +X Damage"
+info={ffg:INSTRUCTION_BARGHEST}
 traits=melee dark wilderness medium
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterEttin]
 name="Ettin"
 image="../ffg/img/Monster_Ettin.dds"
-info="Ettins spend Surges in the following order:\n: +X Damage\n\nThow: Place the hero as far as possible from the closest other hero."
+info={ffg:INSTRUCTION_ETTIN}
 traits=melee mountain cave huge
 activation=Brawler1 Brawler2 Brawler3
 
 [MonsterElemental]
 name="Elemental"
 image="../ffg/img/Monster_Elemental.dds"
-info="Air: Until this monster's next activation, only adjacent heroes can attack it."
+info={ffg:INSTRUCTION_ELEMENTAL}
 traits=ranged cold hot huge
 
 [MonsterMerriod]
 name="Merriod"
 image="../ffg/img/Monster_Merriod.dds"
-info="Merriods spend Surges in the following order: \n: Immobilize \n: +X Damage \n\nFlail: The master Merriod uses ""Flail"" whenever possible."
+info={ffg:INSTRUCTION_MERRIOD}
 traits=melee water wilderness huge
 
 [MonsterShadowDragon]
 name="Shadow Dragon"
 image="../ffg/img/Monster_ShadowDragon.dds"
 imageplace="../ffg/img/Monster_ShadowDragon_Placement.dds"
-info="Master Shadow Dragons spend Surges in the following order: \n: Fire Breath (if at least 1 additional hero is affected) \n: +X Damage \n\nFire Breath: When tracing the path for ""Fire Breath,"" include as many heroes as possible without tracing through monsters."
+info={ffg:INSTRUCTION_SHADOW_DRAGON}
 traits=melee dark cave massive
 activation=Brawler1 Brawler2 Brawler2
