Random numbers and heros test, base investigators added.

--- a/content/MoM/base/investigators.ini
+++ b/content/MoM/base/investigators.ini
@@ -12,3 +12,33 @@ traits=female
 name="Minh Thi Phan"
 image="../ffg/img/Circle_Investigator_Minh_Thi_Phan.dds"
 traits=female
+
+[HeroFatherMateo]
+name="Father Mateo"
+image="../ffg/img/Circle_Investigator_Father_Mateo.dds"
+traits=female
+
+[HeroPrestonFairmont]
+name="Preston Fairmont"
+image="../ffg/img/Circle_Investigator_Preston_Fairmont.dds"
+traits=female
+
+[HeroAgathaCrane]
+name="Agatha Crane"
+image="../ffg/img/Circle_Investigator_Agatha_Crane.dds"
+traits=female
+
+[HeroCarsonSinclair]
+name="Carson Sinclair"
+image="../ffg/img/Circle_Investigator_Carson_Sinclair.dds"
+traits=female
+
+[HeroWendyAdams]
+name="Wendy Adams"
+image="../ffg/img/Circle_Investigator_Wendy_Adams.dds"
+traits=female
+
+[HeroWilliamYorick]
+name="William Yorick"
+image="../ffg/img/Circle_Investigator_William_Yorick.dds"
+traits=female
