--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -3,8 +3,10 @@
 name=Example Scenario
 description=""
 type=MoM
-maxpanx=20
-maxpany=20
+minpany=-5
+minpanx=-1
+maxpanx=7
+maxpany=3
 
 
 [Tile0]
@@ -14,17 +16,19 @@ side=TileSideAlleyCorner2
 
 [Tile1]
 xposition=0
-yposition=-2
+yposition=-1
 side=TileSideAlley1
 
 [Event0]
+xposition=3
+yposition=0
 text="You enter an alley..."
 add=Tile0 Token0
 trigger=EventStart
 
 [Token0]
-xposition=5.5
-yposition=-1.5
+xposition=4.5
+yposition=-1
 text="A Door."
 confirmtext="Explore"
 event=Monster0
