Minor MoM fixes.

--- a/content/MoM/base/tiles.ini
+++ b/content/MoM/base/tiles.ini
@@ -1,11 +1,3 @@
-[TileAlley]
-sidea=Alley1
-sideb=Alley2
-
-[TileAlleyCorner]
-sidea=AlleyCorner1
-sideb=AlleyCorner2
-
 [TileSideAlley1]
 image="../ffg/img/Tile_Alley_1_MAD20.dds"
 
@@ -17,3 +9,117 @@ image="../ffg/img/Tile_Alley_Corner_1_MAD20.dds"
 
 [TileSideAlleyCorner2]
 image="../ffg/img/Tile_Alley_Corner_2_MAD20.dds"
+
+[TileSideAttic]
+image="../ffg/img/Tile_Attic_MAD20.dds"
+
+[TileSideBallroom]
+image="../ffg/img/Tile_Ballroom_MAD20.dds"
+
+[TileSideBasement]
+image="../ffg/img/Tile_Basement_MAD20.dds"
+
+[TileSideBathroom]
+image="../ffg/img/Tile_Bathroom_MAD20.dds"
+
+[TileSideBeach]
+image="../ffg/img/Tile_Beach_MAD20.dds"
+
+[TileSideBedroom1]
+image="../ffg/img/Tile_Bedroom_1_MAD20.dds"
+
+[TileSideBedroom2]
+image="../ffg/img/Tile_Bedroom_2_MAD20.dds"
+
+[TileSideBellTower]
+image="../ffg/img/Tile_Bell_Tower_MAD20.dds"
+
+[TileSideBilliardsRoom]
+image="../ffg/img/Tile_Billiards_Room_MAD20.dds"
+
+[TileSideConservatory]
+image="../ffg/img/Tile_Conservatory_MAD20.dds"
+
+[TileSideDiningRoom]
+image="../ffg/img/Tile_Dining_Room_MAD20.dds"
+
+[TileSideDock1]
+image="../ffg/img/Tile_Dock_1_MAD20.dds"
+
+[TileSideDock2]
+image="../ffg/img/Tile_Dock_2_MAD20.dds"
+
+[TileSideEntryHall]
+image="../ffg/img/Tile_Entry_Hall_MAD20.dds"
+
+[TileSideHallCorner1]
+image="../ffg/img/Tile_Hall_Corner_1_MAD20.dds"
+
+[TileSideHallCorner2]
+image="../ffg/img/Tile_Hall_Corner_2_MAD20.dds"
+
+[TileSideHallEnd]
+image="../ffg/img/Tile_Hall_End_MAD20.dds"
+
+[TileSideHallStairs]
+image="../ffg/img/Tile_Hall_Stairs_MAD20.dds"
+
+[TileSideHouseBoat]
+image="../ffg/img/Tile_House_Boat_MAD20.dds"
+
+[TileSideInteriorHall]
+image="../ffg/img/Tile_Interior_Hall_MAD20.dds"
+
+[TileSideLobby]
+image="../ffg/img/Tile_Lobby_MAD20.dds"
+
+[TileSideLounge]
+image="../ffg/img/Tile_Lounge_MAD20.dds"
+
+[TileSideOffice]
+image="../ffg/img/Tile_Office_MAD20.dds"
+
+[TileSideParkPond]
+image="../ffg/img/Tile_Park_Pond_MAD20.dds"
+
+[TileSidePier]
+image="../ffg/img/Tile_Pier_MAD20.dds"
+
+[TileSideRentalDock]
+image="../ffg/img/Tile_Rental_Dock_MAD20.dds"
+
+[TileSideRooftop]
+image="../ffg/img/Tile_Rooftop_MAD06.dds"
+
+[TileSideStorefront]
+image="../ffg/img/Tile_Storefront_MAD20.dds"
+
+[TileSideStreet1]
+image="../ffg/img/Tile_Street_1_MAD20.dds"
+
+[TileSideStreet2]
+image="../ffg/img/Tile_Street_2_MAD20.dds"
+
+[TileSideStreetCorner1]
+image="../ffg/img/Tile_Street_Corner_1_MAD20.dds"
+
+[TileSideStreetCorner2]
+image="../ffg/img/Tile_Street_Corner_2_MAD20.dds"
+
+[TileSideStreetCorner3]
+image="../ffg/img/Tile_Street_Corner_3_MAD20.dds"
+
+[TileSideStudy]
+image="../ffg/img/Tile_Study_MAD20.dds"
+
+[TileSideTownSquare]
+image="../ffg/img/Tile_Town_Square_MAD20.dds"
+
+[TileSideWarehouse]
+image="../ffg/img/Tile_Warehouse_MAD20.dds"
+
+[TileSideYard1]
+image="../ffg/img/Tile_Yard_1_MAD20.dds"
+
+[TileSideYard2]
+image="../ffg/img/Tile_Yard_2_MAD20.dds"
