--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -3,41 +3,61 @@
 name=Example Scenario
 description=""
 type=MoM
-minpany=-5
+minpany=-14
 minpanx=-1
-maxpanx=7
-maxpany=3
+maxpanx=14
+maxpany=4
 
 
-[Tile0]
+[TileStart]
 xposition=0
 yposition=2
 side=TileSideAlleyCorner2
 
-[Tile1]
+[TileSecondAlley]
 xposition=0
 yposition=-1
 side=TileSideAlley1
 
-[Event0]
+[EventStart]
 xposition=3
 yposition=0
 text="You enter an alley..."
-add=Tile0 Token0
+add=TileStart TokenDoor
 trigger=EventStart
 
-[Token0]
+[TokenDoor]
 xposition=4.5
 yposition=-1
 text="A Door."
 confirmtext="Explore"
-event=Monster0
+event=MonsterZombie
 type=explore
 
-[Monster0]
+[MonsterZombie]
 xposition=1
 yposition=-3
 text="A Zombie!"
-add=Tile1
+add=TileSecondAlley Tile2 Tile3 Tile4 Tile5
 remove=Token0
 monster=MonsterZombie
+
+[Tile2]
+xposition=6
+yposition=-1
+side=TileSideYard1
+
+[Tile3]
+xposition=6
+yposition=-4
+side=TileSideLobby
+
+[Tile4]
+xposition=0
+yposition=-4
+side=TileSideEntryHall
+
+[Tile5]
+xposition=0
+yposition=-7
+side=TileSideInteriorHall
