Updating to use better token system

--- a/quests/D2E/example/quest.ini
+++ b/quests/D2E/example/quest.ini
@@ -2,6 +2,7 @@
 [Quest]
 name=Example Quest
 description=Show how things work!
+type=D2E
 minpany=-7
 minpanx=-6
 maxpanx=8
@@ -193,7 +194,7 @@ yposition=9
 text="You may use an action and test {knowledge} to attempt to dispel the runes."
 event=EventRunesPassNoFM EventRunesPass
 failevent=EventRunesFail
-type=objective-token-red
+type=TokenObjectiveRed
 
 [MonsterIntro]
 xposition=-1
