Start of peril info

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -1,24 +1,100 @@
-;{0} = Hero/Damage/Monster
-;{1}...
+; PerilMinor1 unsure
 
-;class minor/major/deadly
+[PerilMinor22H]
+text={ffg:PERIL_MINOR_2_RULES_2HERO}
+flags=#2hero
 
+[PerilMinor23H]
+text={ffg:PERIL_MINOR_2_RULES_3HERO}
+flags=#3hero
 
-;event
-;Yes/No
-;random hero
-;random monster
-;follow up (once)
-;minor/major/deadly
-;permanent end round.
-;trigger on defeat
-;message based on monsters present
-;damage amount (rnd)
-;message based on expansions
+[PerilMinor24H]
+text={ffg:PERIL_MINOR_2_RULES_4HERO}
+flags=#4hero
 
+[PerilMinor3]
+text={ffg:PERIL_MINOR_3_RULES}
 
-;Peril
-;trigger minor, major, deadly (only one)
-;text0=hero/number(1,4)/monster(traits)
-;flag required for monsters present
+[PerilMinor4]
+text={ffg:PERIL_MINOR_4_RULES}
+; fixme PERIL_MINOR_4_TIMER?
 
+[PerilMinor5]
+text={ffg:PERIL_MINOR_5_RULES}
+; fixme PERIL_MINOR_5_TIMER?
+
+; There is no minor6??
+
+; fixme add spiders
+[PerilMinor7]
+text={ffg:PERIL_MINOR_7_RULES}
+;PERIL_MINOR_7_CHECK/PERIL_MINOR_7_TIMER don't seem to be used
+
+;fixme add zombies
+[PerilMinor8]
+text={ffg:PERIL_MINOR_8_RULES}
+; fixme PERIL_MINOR_8_TIMER?
+
+; replace 0 with random hero
+; I don't think this is actually in the game?
+[PerilMinor13]
+text={ffg:PERIL_MINOR_13_RULES}
+
+[PerilMajor1]
+text={ffg:PERIL_MAJOR_1_RULES}
+
+; replace {0} with damage (how much?)
+[PerilMajor2]
+text={ffg:PERIL_MAJOR_2_RULES}
+
+; 0 is random hero, 1 is random? monster
+[PerilMajor3]
+text={ffg:PERIL_MAJOR_3_RULES}
+
+[PerilMajor4]
+text={ffg:PERIL_MAJOR_4_RULES}
+
+; PERIL_MAJOR_5_ENDRND not used?
+; add goblins
+[PerilMajor5]
+text={ffg:PERIL_MAJOR_5_RULES}
+
+; We don't like the number 6?
+
+; add elementals
+[PerilMajor7]
+text={ffg:PERIL_MAJOR_7_RULES}
+; what about PERIL_MAJOR_7_RETREAT PERIL_MAJOR_7_REAPPEAR PERIL_MAJOR_7_DEFEATED?
+
+; add shadow dragon, fleshmoulder
+[PerilMajor8]
+text={ffg:PERIL_MAJOR_8_RULES}
+; what about PERIL_MAJOR_8_REINFORCEMENT?
+
+[PerilMajor9]
+text={ffg:PERIL_MAJOR_9_RULES}
+
+; I don't know?
+;PERIL_MAJOR_10_RULES,"[u]Major Peril: Blood for Blood[/u]\n\n[i]An elderly figure watches from the darkness, flitting from shadow to shadow. Time and time again, just as you forget he is there, he screams out: ""Blood for blood, blood for blood!""[/i]\n\n"
+;PERIL_MAJOR_10_RULES_MONSTERS,"{0}Each monster recovers 3 ≥. Then the heroes collectively suffer an amount of ≥ equal to the total ≥ recovered."
+;PERIL_MAJOR_10_RULES_EMPTY,"{2}Each hero suffers {0} ≥. If {1} is not defeated, that hero immediately recovers {0} ≥."
+;PERIL_MAJOR_10_TIMER,"[u]Major Peril: Blood for Blood[/u]\n\n[i]""Blood was taken,"" the man calls, ""blood be returned!""[/i]\n\nEach monster recovers 3 ≥. Then the heroes collectively suffer an amount of ≥ equal to the total ≥ recovered."
+
+[PerilMajor11]
+text={ffg:PERIL_MAJOR_11_RULES}
+
+; 0 to damage (maybe 7?)
+[PerilDeadly1]
+text={ffg:PERIL_DEADLY_1_RULES}
+
+[PerilDeadly2]
+text={ffg:PERIL_DEADLY_2_RULES}
+delayedevents=1:PERIL_DEADLY_2_2 2:PERIL_DEADLY_2_END
+
+; RtL doesn't actually do this!
+[PerilD22]
+text={ffg:PERIL_DEADLY_2_2}
+
+; Should we force end here? RtL doesn't
+[PerilD2End]
+text={ffg:PERIL_DEADLY_2_END}
