More work getting perils going

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -35,21 +35,21 @@ text={ffg:PERIL_MINOR_7_RULES}
 text={ffg:PERIL_MINOR_8_RULES}
 ; fixme PERIL_MINOR_8_TIMER?
 
-; replace 0 with random hero
 ; I don't think this is actually in the game?
 [PerilMinor13]
-text={ffg:PERIL_MINOR_13_RULES}
+text={ffg:PERIL_MINOR_13_RULES:{0}:{rnd:hero}}
 
 [PerilMajor1]
 text={ffg:PERIL_MAJOR_1_RULES}
+flags=#monsters
 
 ; replace {0} with damage (how much?)
 [PerilMajor2]
-text={ffg:PERIL_MAJOR_2_RULES}
+text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
 
-; 0 is random hero, 1 is random? monster
+; 1 is random? monster
 [PerilMajor3]
-text={ffg:PERIL_MAJOR_3_RULES}
+text={ffg:PERIL_MAJOR_3_RULES:{0}:{rnd:hero}:{1}:Monster?}
 
 [PerilMajor4]
 text={ffg:PERIL_MAJOR_4_RULES}
@@ -85,13 +85,13 @@ text={ffg:PERIL_MAJOR_11_RULES}
 
 ; 0 to damage (maybe 7?)
 [PerilDeadly1]
-text={ffg:PERIL_DEADLY_1_RULES}
+text={ffg:PERIL_DEADLY_1_RULES:{0}:{rnd:7:7}}
 
 [PerilDeadly2]
 text={ffg:PERIL_DEADLY_2_RULES}
+; RtL doesn't actually do this!
 delayedevents=1:PERIL_DEADLY_2_2 2:PERIL_DEADLY_2_END
 
-; RtL doesn't actually do this!
 [PerilD22]
 text={ffg:PERIL_DEADLY_2_2}
 
