--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -26,13 +26,13 @@ text={ffg:PERIL_MINOR_5_RULES}
 ; There is no minor6??
 
 ; fixme add spiders
-[PerilMinor7]
-text={ffg:PERIL_MINOR_7_RULES}
+;[PerilMinor7]
+;text={ffg:PERIL_MINOR_7_RULES}
 ;PERIL_MINOR_7_CHECK/PERIL_MINOR_7_TIMER don't seem to be used
 
 ;fixme add zombies
-[PerilMinor8]
-text={ffg:PERIL_MINOR_8_RULES}
+;[PerilMinor8]
+;text={ffg:PERIL_MINOR_8_RULES}
 ; fixme PERIL_MINOR_8_TIMER?
 
 ; I don't think this is actually in the game?
@@ -48,27 +48,27 @@ flags=#monsters
 text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
 
 ; 1 is random? monster
-[PerilMajor3]
-text={ffg:PERIL_MAJOR_3_RULES:{0}:{rnd:hero}:{1}:Monster?}
+;[PerilMajor3]
+;text={ffg:PERIL_MAJOR_3_RULES:{0}:{rnd:hero}:{1}:Monster?}
 
 [PerilMajor4]
 text={ffg:PERIL_MAJOR_4_RULES}
 
 ; PERIL_MAJOR_5_ENDRND not used?
 ; add goblins
-[PerilMajor5]
-text={ffg:PERIL_MAJOR_5_RULES}
+;[PerilMajor5]
+;text={ffg:PERIL_MAJOR_5_RULES}
 
 ; We don't like the number 6?
 
 ; add elementals
-[PerilMajor7]
-text={ffg:PERIL_MAJOR_7_RULES}
+;[PerilMajor7]
+;text={ffg:PERIL_MAJOR_7_RULES}
 ; what about PERIL_MAJOR_7_RETREAT PERIL_MAJOR_7_REAPPEAR PERIL_MAJOR_7_DEFEATED?
 
 ; add shadow dragon, fleshmoulder
-[PerilMajor8]
-text={ffg:PERIL_MAJOR_8_RULES}
+;[PerilMajor8]
+;text={ffg:PERIL_MAJOR_8_RULES}
 ; what about PERIL_MAJOR_8_REINFORCEMENT?
 
 [PerilMajor9]
