More work on content selection.

--- a/content/D2E/lotw/content_pack.ini
+++ b/content/D2E/lotw/content_pack.ini
@@ -2,6 +2,7 @@
 name=Lair of the Wyrm
 description=Lair of the Wyrm expansion for Descent: Journeys in the Dark Second Edition
 image="img/DJ03_LairOfTheWyrm.dds"
+id=LotW
 
 [ContentPackData]
 heros.ini
