--- a/content/D2E/lor/tiles.ini
+++ b/content/D2E/lor/tiles.ini
@@ -7,13 +7,19 @@ image="../ffg/img/038A.dds"
 traits=outside
 
 [TileSide39A]
-top=79
+top=105
 left=144.5
 image="../ffg/img/039A.dds"
 traits=outside
 
 [TileSide43A]
-top=138
+top=164
 left=138
 image="../ffg/img/043A.dds"
 traits=outside
+
+[TileSide43B]
+top=164
+left=164
+image="../ffg/img/043B.dds"
+traits=inside
