--- a/content/D2E/tt/tiles.ini
+++ b/content/D2E/tt/tiles.ini
@@ -1,10 +1,16 @@
 ; many are missing
 
 [TileSide43A]
-top=138
+top=164
 left=138
 image="../ffg/img/043A.dds"
 traits=outside
+
+[TileSide43B]
+top=164
+left=164
+image="../ffg/img/043B.dds"
+traits=inside
 
 [TileSide44A]
 top=197
@@ -13,7 +19,7 @@ image="../ffg/img/044A.dds"
 traits=outside inside transistion
 
 [TileSide46B]
-top=85.5
+top=111.5
 left=46
 image="../ffg/img/046B.dds"
 traits=water inside
