--- a/content/D2E/base/tiles.ini
+++ b/content/D2E/base/tiles.ini
@@ -169,8 +169,12 @@ image="../ffg/img/009B.dds"
 traits=inside dirt
 
 ;10A is missing
-;10B is missing
 
+[TileSide10B]
+top=46
+left=46
+image="../ffg/img/010B.dds"
+traits=inside tomb
 
 [TileSide11A]
 top=46
@@ -245,6 +249,13 @@ image="../ffg/img/016B.dds"
 traits=inside
 
 ;17A is missing
+
+[TileSide17B]
+top=59
+left=33
+image="../ffg/img/017B.dds"
+traits=inside
+
 ;17B is missing
 ;18A is missing
 ;18B is missing
@@ -255,7 +266,11 @@ left=354.5
 image="../ffg/img/019A.dds"
 traits=outside bridge
 
-;19B is missing
+[TileSide19B]
+top=197
+left=354.5
+image="../ffg/img/019B.dds"
+traits=inside stairs
 
 [TileSide20A]
 top=105
@@ -287,7 +302,11 @@ left=197
 image="../ffg/img/022A.dds"
 traits=outside
 
-;22B is missing
+[TileSide22B]
+top=407
+left=197
+image="../ffg/img/022B.dds"
+traits=inside
 
 [TileSide23A]
 top=394
