--- a/content/D2E/lor/tiles.ini
+++ b/content/D2E/lor/tiles.ini
@@ -1,15 +1,39 @@
 ; many are missing
 
+[TileSide36A]
+top=92
+left=92
+image="../ffg/img/036A.dds"
+traits=outside
+
 [TileSide38A]
 top=144.5
 left=197
 image="../ffg/img/038A.dds"
 traits=outside
 
+[TileSide38B]
+top=144.5
+left=197
+image="../ffg/img/038B.dds"
+traits=inside water
+
 [TileSide39A]
 top=105
 left=144.5
 image="../ffg/img/039A.dds"
+traits=outside
+
+[TileSide40A]
+top=249.5
+left=197
+image="../ffg/img/040A.dds"
+traits=outside
+
+[TileSide42A]
+top=407
+left=197
+image="../ffg/img/042A.dds"
 traits=outside
 
 [TileSide43A]
