--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -6,6 +6,12 @@ left=197
 image="../ffg/img/050A.dds"
 traits=city fountain
 
+[TileSide50B]
+top=184
+left=197
+image="../ffg/img/050B.dds"
+traits=blackrealm altar
+
 [TileSide51B]
 top=289
 left=197
@@ -18,6 +24,12 @@ left=59
 image="../ffg/img/053A.dds"
 traits=outside
 
+[TileSide54B]
+top=59
+left=33
+image="../ffg/img/054B.dds"
+traits=blackrealm pit
+
 [TileSide55B]
 top=302
 left=197
@@ -25,6 +37,12 @@ image="../ffg/img/055B.dds"
 traits=blackrealm stairs
 
 [TileSide56B]
+top=302
+left=210
+image="../ffg/img/056B.dds"
+traits=blackrealm plinth
+
+[TileSide57B]
 top=302
 left=210
 image="../ffg/img/056B.dds"
@@ -42,8 +60,34 @@ left=236.5
 image="../ffg/img/060A.dds"
 traits=city tavern
 
+[TileSide60B]
+top=197
+left=232.5
+image="../ffg/img/060B.dds"
+traits=blackrealm
+
 [TileSide62B]
 top=111.5
 left=98.5
 image="../ffg/img/062B.dds"
-traits=blackrealm void
+traits=blackrealm
+
+[TileSide63B]
+top=354.5
+left=249.5
+image="../ffg/img/063B.dds"
+traits=blackrealm
+
+[TileSide66B]
+top=164
+left=46
+image="../ffg/img/066B.dds"
+traits=blackrealm
+
+[TileSide68B]
+top=164
+left=164
+image="../ffg/img/068B.dds"
+traits=blackrealm
+
+; 69B
