More connecting tiles.

--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -91,3 +91,45 @@ image="../ffg/img/068B.dds"
 traits=blackrealm
 
 ; 69B
+
+[TileSideCapSoNA]
+top=90
+left=23
+image="../ffg/img/Cap03.dds"
+traits=city
+
+[TileSideCapSoNB]
+top=90
+left=23
+image="../ffg/img/Cap04.dds"
+traits=blackrealm
+
+[TileSideEntranceSoNA]
+top=36
+left=23
+image="../ffg/img/Entrance03.dds"
+traits=city
+
+[TileSideEntranceSoNB]
+top=36
+left=23
+image="../ffg/img/Entrance04.dds"
+traits=blackrealm
+
+; extension A missing (city extension)
+
+[TileSideExtensionSoNB]
+top=75
+left=23
+image="../ffg/img/Joint03.dds"
+traits=blackrealm
+
+[TileSideTransitionSoNA]
+top=75.5
+left=23
+image="../ffg/img/Transition01.dds"
+traits=city outside transistion
+
+; Transition B is missing (alternate blackrealm extension)
+
+; Also missing both sides of other transition boards (br-city, city-inside) and (br-city, city-outside)
