--- a/content/D2E/mob/tiles.ini
+++ b/content/D2E/mob/tiles.ini
@@ -46,4 +46,10 @@ left=79
 image="../ffg/img/087B.dds"
 traits=inside torture sludge
 
-; does the swamp entrance go here?
+[TileSideEntranceSwampA]
+top=36
+left=23
+image="../ffg/img/Entrance05.dds"
+traits=outside swamp
+
+; entrance side B missing
