Not crashing if mom+rtl not available.

--- a/content/MoM/cotw/content_pack.ini
+++ b/content/MoM/cotw/content_pack.ini
@@ -1,8 +1,8 @@
 [ContentPack]
 name=Call of the Wild
-
-; Optional description
 description=First edition expansion, can use tiles, investigators and monsters.
+image="../ffg/img/MAD09.dds"
+id=CotW
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
