--- a/content/MoM/mom1e/content_pack.ini
+++ b/content/MoM/mom1e/content_pack.ini
@@ -1,9 +1,9 @@
 ; content packs include a content header ini which has:
 [ContentPack]
 name=Mansions of Madness
-
-; Optional description
 description=First Edition, can use tiles monsters and investigators
+image="../ffg/img/MAD01.dds"
+id=MoM1E
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
