--- a/content/MoM/fa/content_pack.ini
+++ b/content/MoM/fa/content_pack.ini
@@ -1,9 +1,9 @@
 ; content packs include a content header ini which has:
 [ContentPack]
 name=Forbidden Alchemy
-
-; Optional description
 description=First edition expansion, can use tiles, investigators and monsters.
+image="../ffg/img/MAD06.dds"
+id=FA
 
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
