Added all MoM investigators.

--- a/content/MoM/cotw/investigators.ini
+++ b/content/MoM/cotw/investigators.ini
@@ -2,3 +2,18 @@
 name="Amanda Sharpe"
 image="../ffg/img/Circle_Investigator_Amanda_Sharpe.dds"
 traits=female
+
+[HeroBob Jenkins]
+name="Bob Jenkins"
+image="../ffg/img/Circle_Investigator_Bob_Jenkins.dds"
+traits=male
+
+[HeroMandy Thompson]
+name="Mandy Thompson"
+image="../ffg/img/Circle_Investigator_Mandy_Thompson.dds"
+traits=female
+
+[HeroMonterey Jack]
+name="Monterey Jack"
+image="../ffg/img/Circle_Investigator_Monterey_Jack.dds"
+traits=male
