--- a/content/MoM/mom1e/investigators.ini
+++ b/content/MoM/mom1e/investigators.ini
@@ -2,3 +2,38 @@
 name="Michael McGlen"
 image="../ffg/img/Circle_Investigator_Michael_McGlen.dds"
 traits=male
+
+[HeroAshcanPete]
+name=""Ashcan" Pete"
+image="../ffg/img/Circle_Investigator_Ashcan_Pete.dds"
+traits=male
+
+[HeroGloriaGoldberg]
+name="Gloria Goldberg"
+image="../ffg/img/Circle_Investigator_Gloria_Goldberg.dds"
+traits=female
+
+[HeroHarveyWalters]
+name="Harvey Walters"
+image="../ffg/img/Circle_Investigator_Harvey_Walters.dds"
+traits=male
+
+[HeroJennyBarnes]
+name="Jenny Barnes"
+image="../ffg/img/Circle_Investigator_Jenny_Barnes.dds"
+traits=female
+
+[HeroJoeDiamond]
+name="Joe Diamond"
+image="../ffg/img/Circle_Investigator_Joe_Diamond.dds"
+traits=male
+
+[HeroKateWinthrop]
+name="Kate Winthrop"
+image="../ffg/img/Circle_Investigator_Kate_Winthrop.dds"
+traits=female
+
+[HeroSisterMary]
+name="Sister Mary"
+image="../ffg/img/Circle_Investigator_Sister_Mary.dds"
+traits=female
