--- a/content/MoM/fa/investigators.ini
+++ b/content/MoM/fa/investigators.ini
@@ -2,3 +2,18 @@
 name="Carolyn Fern"
 image="../ffg/img/Circle_Investigator_Carolyn_Fern.dds"
 traits=female
+
+[HeroDarrellSimmons]
+name="Darrell Simmons"
+image="../ffg/img/Circle_Investigator_Darrell_Simmons.dds"
+traits=male
+
+[HeroDexterDrake]
+name="Dexter Drake"
+image="../ffg/img/Circle_Investigator_Dexter_Drake.dds"
+traits=male
+
+[HeroVincentLee]
+name="Vincent Lee"
+image="../ffg/img/Circle_Investigator_Vincent_Lee.dds"
+traits=male
