tile aspect and dpi control.

--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -9,6 +9,8 @@ image="../ffg/img/Tile_Dining_Room_MAD01.dds"
 
 [TileSideFoyer]
 image="../ffg/img/Tile_Foyer_MAD01.dds"
+aspect=1.5
+pps=170.6666667
 
 [TileSideGallery]
 image="../ffg/img/Tile_Gallery_MAD01.dds"
